--- a/pages/AboutUs.html
+++ b/pages/AboutUs.html
@@ -137,7 +137,7 @@
           </div>
         </main>
         <footer>
-          <img src="./image/logo2.png" alt="Logotip" class="logo2" />
+          <img src="../image/logo2.png" alt="Logotip" class="logo2" />
           <ul class="footer-list">
             <li class="footer-item">
               <a
