--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
           <nav>
             <img src="./image/logo.png" alt="Logotip" class="logo" />
             <ul class="nav-list">
-              <li class="nav-item"><a href="http://127.0.0.1:5500/index.html" target="_blank" class="nav-link">Home</a></li>
+              <li class="nav-item"><a href="./index.html" target="_blank" class="nav-link">Home</a></li>
               <li class="nav-item">
-                <a href="http://127.0.0.1:5500/pages/AboutUs.html" target="_blank" class="nav-link">About Us</a>
+                <a href="./pages/AboutUs.html" target="_blank" class="nav-link">About Us</a>
               </li>
               <li class="nav-item">
                 <a href="#" target="_blank" class="nav-link">Create Your Plan</a>
@@ -166,9 +166,9 @@
         <footer>
           <img src="./image/logo2.png" alt="Logotip" class="logo2" />
             <ul class="footer-list">
-              <li class="footer-item"><a href="http://127.0.0.1:5500/index.html" target="_blank" class="footer-link">Home</a></li>
+              <li class="footer-item"><a href="./index.html" target="_blank" class="footer-link">Home</a></li>
               <li class="footer-item">
-                <a href="http://127.0.0.1:5500/pages/AboutUs.html" target="_blank" class="footer-link">About Us</a>
+                <a href="./pages/AboutUs.html" target="_blank" class="footer-link">About Us</a>
               </li>
               <li class="footer-item">
                 <a href="#" target="_blank" class="footer-link">Create Your Plan</a>
