--- a/pages/AboutUs.html
+++ b/pages/AboutUs.html
@@ -16,7 +16,7 @@
             <ul class="nav-list">
               <li class="nav-item">
                 <a
-                  href="http://127.0.0.1:5500/index.html"
+                  href="../index.html"
                   target="_blank"
                   class="nav-link"
                   >Home</a
@@ -24,7 +24,7 @@
               </li>
               <li class="nav-item">
                 <a
-                  href="http://127.0.0.1:5500/pages/AboutUs.html"
+                  href="../pages/AboutUs.html"
                   target="_blank"
                   class="nav-link"
                   >About Us</a
