--- a/index.html
+++ b/index.html
@@ -5,8 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Coffee</title>
     <link rel="stylesheet" href="./css/normalize.css" />
-    <link rel="stylesheet" href="./css/minify.css">
     <link rel="stylesheet" href="./css/fonts.css" />
+    <!-- <link rel="stylesheet" href="./css/style.css" /> -->
+     <link rel="stylesheet" href="./css/minify.css">
   </head>
   <body>
     <div class="wrapper">
@@ -15,12 +16,16 @@
           <nav>
             <img src="./image/logo.png" alt="Logotip" class="logo" />
             <ul class="nav-list">
-              <li class="nav-item"><a href="./index.html" target="_blank" class="nav-link">Home</a></li>
               <li class="nav-item">
-                <a href="./pages/AboutUs.html" target="_blank" class="nav-link">About Us</a>
+                <a href="#" class="nav-link">Home</a>
+              </li>
+              <li class="nav-item"> 
+                <a href="./pages/AboutUs.html" class="nav-link">About Us</a>
               </li>
               <li class="nav-item">
-                <a href="#" target="_blank" class="nav-link">Create Your Plan</a>
+                <a href="./pages/Contact.html" class="nav-link"
+                  >Create Your Plan</a
+                >
               </li>
             </ul>
           </nav>
@@ -165,20 +170,24 @@
         </main>
         <footer>
           <img src="./image/logo2.png" alt="Logotip" class="logo2" />
-            <ul class="footer-list">
-              <li class="footer-item"><a href="./index.html" target="_blank" class="footer-link">Home</a></li>
-              <li class="footer-item">
-                <a href="./pages/AboutUs.html" target="_blank" class="footer-link">About Us</a>
-              </li>
-              <li class="footer-item">
-                <a href="#" target="_blank" class="footer-link">Create Your Plan</a>
-              </li>
-            </ul>
-            <div class="footer-images">
-              <img src="./image/facebook.png" alt="Facebook" class="icon">
-              <img src="./image/X.png" alt="X" class="icon">
-              <img src="./image/insta.png" alt="Instagram" class="icon">
-            </div>
+          <ul class="footer-list">
+            <li class="footer-item">
+              <a href="#" class="footer-link">Home</a>
+            </li>
+            <li class="footer-item">
+              <a href="./pages/AboutUs.html" class="footer-link">About Us</a>
+            </li>
+            <li class="footer-item">
+              <a href="./pages/Contact.html" class="footer-link"
+                >Create Your Plan</a
+              >
+            </li>
+          </ul>
+          <div class="footer-images">
+            <img src="./image/facebook.png" alt="Facebook" class="icon" />
+            <img src="./image/X.png" alt="X" class="icon" />
+            <img src="./image/insta.png" alt="Instagram" class="icon" />
+          </div>
         </footer>
       </div>
     </div>
