--- a/pages/AboutUs.html
+++ b/pages/AboutUs.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>About Us</title>
-    <link rel="stylesheet" href="../css/normalize.css">
+    <link rel="stylesheet" href="../css/normalize.css" />
     <link rel="stylesheet" href="../css/minify.css">
     <link rel="stylesheet" href="../css/fonts.css" />
+    <!-- <link rel="stylesheet" href="../css/style.css" /> -->
   </head>
   <body>
     <div class="wrapper">
@@ -16,23 +17,13 @@
             <img src="../image/logo.png" alt="Logotip" class="logo" />
             <ul class="nav-list">
               <li class="nav-item">
-                <a
-                  href="../index.html"
-                  target="_blank"
-                  class="nav-link"
-                  >Home</a
-                >
+                <a href="../index.html" class="nav-link">Home</a>
               </li>
               <li class="nav-item">
-                <a
-                  href="../pages/AboutUs.html"
-                  target="_blank"
-                  class="nav-link"
-                  >About Us</a
-                >
+                <a href="#" class="nav-link">About Us</a>
               </li>
               <li class="nav-item">
-                <a href="#" target="_blank" class="nav-link"
+                <a href="../pages/Contact.html" class="nav-link"
                   >Create Your Plan</a
                 >
               </li>
@@ -142,22 +133,20 @@
           <ul class="footer-list">
             <li class="footer-item">
               <a
-                href="http://127.0.0.1:5500/index.html"
-                target="_blank"
+                href="../index.html"
                 class="footer-link"
                 >Home</a
               >
             </li>
             <li class="footer-item">
               <a
-                href="http://127.0.0.1:5500/pages/AboutUs.html"
-                target="_blank"
+                href="#"
                 class="footer-link"
                 >About Us</a
               >
             </li>
             <li class="footer-item">
-              <a href="#" target="_blank" class="footer-link"
+              <a href="../pages/Contact.html" class="footer-link"
                 >Create Your Plan</a
               >
             </li>
