--- a/pages/AboutUs.html
+++ b/pages/AboutUs.html
@@ -5,159 +5,188 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>About Us</title>
     <link rel="stylesheet" href="../css/normalize.css" />
-    <link rel="stylesheet" href="../css/minify.css">
     <link rel="stylesheet" href="../css/fonts.css" />
-    <!-- <link rel="stylesheet" href="../css/style.css" /> -->
+    <link rel="stylesheet" href="../css/style.css" />
   </head>
   <body>
-    <div class="wrapper">
-      <div class="box">
-        <header>
-          <nav>
-            <img src="../image/logo.png" alt="Logotip" class="logo" />
-            <ul class="nav-list">
-              <li class="nav-item">
-                <a href="../index.html" class="nav-link">Home</a>
-              </li>
-              <li class="nav-item">
-                <a href="#" class="nav-link">About Us</a>
-              </li>
-              <li class="nav-item">
-                <a href="../pages/Contact.html" class="nav-link"
-                  >Create Your Plan</a
-                >
-              </li>
-            </ul>
-          </nav>
-          <div class="intro2">
-            <h3 class="intro2-title">About Us</h3>
-            <p class="intro2-text">
-              Coffeeroasters began its journey of exotic discovery in 1999,
-              highlighting stories of coffee from around the world. We have
-              since been dedicated to bring the perfect cup - from bean to brew
-              - in every shipment.
-            </p>
-          </div>
-        </header>
-        <main>
-          <div class="commitment">
-            <img
-              src="../image/page2 coffee man.png"
-              alt="coffee man"
-              class="commitment-img"
-            />
-            <div class="commitment-textarea">
-              <h3 class="commitment-title">Our commitment</h3>
-              <p class="commitment-text">
-                We’re built on a simple mission and a commitment to doing good
-                along the way. We want to make it easy for you to discover and
-                brew the world’s best coffee at home. It all starts at the
-                source. To locate the specific lots we want to purchase, we
-                travel nearly 60 days a year trying to understand the challenges
-                and opportunities in each of these places. We collaborate with
-                exceptional coffee growers and empower a global community of
-                farmers through with well above fair-trade benchmarks. We also
-                offer training, support farm community initiatives, and invest
-                in coffee plant science. Curating only the finest blends, we
-                roast each lot to highlight tasting profiles distinctive to
-                their native growing region.
-              </p>
-            </div>
-          </div>
-          <div class="quality">
-            <h3 class="quality-title">Uncompromising quality</h3>
-            <p class="quality-text">
-              Although we work with growers who pay close attention to all
-              stages of harvest and processing, we employ, on our end, a
-              rigorous quality control program to avoid over-roasting or baking
-              the coffee dry. Every bag of coffee is tagged with a roast date
-              and batch number. Our goal is to roast consistent, user-friendly
-              coffee, so that brewing is easy and enjoyable.
-            </p>
-            <img
-              src="../image/page2 cappucino img.png"
-              alt=""
-              class="quality-img"
-            />
-          </div>
-          <div class="countries">
-            <h4 class="country-title">Our headquarters</h4>
-            <div class="country">
-              <div class="country1">
-                <img
-                  src="../image/UK.png"
-                  alt="United Kingdom"
-                  class="country1-img"
-                />
-                <h3 class="country1-title">United Kingdom</h3>
-                <p class="country1-text">
-                  68 Asfordby Rd <br />
-                  Alcaston <br />
-                  SY6 1YA <br />
-                  +44 1241 918425
-                </p>
-              </div>
-              <div class="country1">
-                <img
-                  src="../image/Canada.png"
-                  alt="United Kingdom"
-                  class="country1-img"
-                />
-                <h3 class="country1-title">Canada</h3>
-                <p class="country1-text">
-                  1528 Eglinton Avenue <br />
-                  Toronto <br />
-                  Ontario M4P 1A6 <br />
-                  +1 416 485 2997
-                </p>
-              </div>
-              <div class="country1">
-                <img
-                  src="../image/Australia.png"
-                  alt="United Kingdom"
-                  class="country1-img"
-                />
-                <h3 class="country1-title">Australia</h3>
-                <p class="country1-text">
-                  36 Swanston Street<br />
-                  Kewell <br />
-                  Victoria <br />
-                  +61 4 9928 3629
-                </p>
-              </div>
-            </div>
-          </div>
-        </main>
-        <footer>
-          <img src="../image/logo2.png" alt="Logotip" class="logo2" />
-          <ul class="footer-list">
-            <li class="footer-item">
-              <a
-                href="../index.html"
-                class="footer-link"
-                >Home</a
-              >
-            </li>
-            <li class="footer-item">
-              <a
-                href="#"
-                class="footer-link"
-                >About Us</a
-              >
-            </li>
-            <li class="footer-item">
-              <a href="../pages/Contact.html" class="footer-link"
-                >Create Your Plan</a
-              >
-            </li>
-          </ul>
-          <div class="footer-images">
-            <img src="../image/facebook.png" alt="Facebook" class="icon" />
-            <img src="../image/X.png" alt="X" class="icon" />
-            <img src="../image/insta.png" alt="Instagram" class="icon" />
-          </div>
-        </footer>
+    <div class="box">
+      <nav class="nav">
+        <img src="../image/logo.png" alt="Logotip" class="logo" />
+        <ul class="nav-list">
+          <li class="nav-item">
+            <a href="../index.html" class="nav-link">Home</a>
+          </li>
+          <li class="nav-item">
+            <a href="#" class="nav-link">About Us</a>
+          </li>
+          <li class="nav-item">
+            <a href="../pages/Contact.html" class="nav-link"
+              >Create Your Plan</a
+            >
+          </li>
+        </ul>
+      </nav>
+      <div class="intro2">
+        <h3 class="intro2-title">About Us</h3>
+        <p class="intro2-text">
+          Coffeeroasters began its journey of exotic discovery in 1999,
+          highlighting stories of coffee from around the world. We have since
+          been dedicated to bring the perfect cup - from bean to brew - in every
+          shipment.
+        </p>
       </div>
+      <div class="commitment">
+        <img
+          src="../image/page2 coffee man.png"
+          alt="coffee man"
+          class="commitment-img"
+        />
+        <div class="commitment-textarea">
+          <h3 class="commitment-title">Our commitment</h3>
+          <p class="commitment-text">
+            We’re built on a simple mission and a commitment to doing good along
+            the way. We want to make it easy for you to discover and brew the
+            world’s best coffee at home. It all starts at the source. To locate
+            the specific lots we want to purchase, we travel nearly 60 days a
+            year trying to understand the challenges and opportunities in each
+            of these places. We collaborate with exceptional coffee growers and
+            empower a global community of farmers through with well above
+            fair-trade benchmarks. We also offer training, support farm
+            community initiatives, and invest in coffee plant science. Curating
+            only the finest blends, we roast each lot to highlight tasting
+            profiles distinctive to their native growing region.
+          </p>
+        </div>
+      </div>
+      <div class="quality">
+        <h3 class="quality-title">Uncompromising quality</h3>
+        <p class="quality-text">
+          Although we work with growers who pay close attention to all stages of
+          harvest and processing, we employ, on our end, a rigorous quality
+          control program to avoid over-roasting or baking the coffee dry. Every
+          bag of coffee is tagged with a roast date and batch number. Our goal
+          is to roast consistent, user-friendly coffee, so that brewing is easy
+          and enjoyable.
+        </p>
+        <img
+          src="../image/page2 cappucino img.png"
+          alt=""
+          class="quality-img"
+        />
+      </div>
+      <div class="countries">
+        <h4 class="countries-title">Our headquarters</h4>
+        <div class="country">
+          <div class="country-1">
+            <img
+              src="../image/UK.png"
+              alt="United Kingdom"
+              class="country-1-img"
+            />
+            <h3 class="country-1-title">United Kingdom</h3>
+            <p class="country-1-text">
+              68 Asfordby Rd <br />
+              Alcaston <br />
+              SY6 1YA <br />
+              +44 1241 918425
+            </p>
+          </div>
+          <div class="country-1">
+            <img
+              src="../image/Canada.png"
+              alt="United Kingdom"
+              class="country1-img"
+            />
+            <h3 class="country-1-title">Canada</h3>
+            <p class="country-1-text">
+              1528 Eglinton Avenue <br />
+              Toronto <br />
+              Ontario M4P 1A6 <br />
+              +1 416 485 2997
+            </p>
+          </div>
+          <div class="country-1">
+            <img
+              src="../image/Australia.png"
+              alt="United Kingdom"
+              class="country-1-img"
+            />
+            <h3 class="country-1-title">Australia</h3>
+            <p class="country-1-text">
+              36 Swanston Street<br />
+              Kewell <br />
+              Victoria <br />
+              +61 4 9928 3629
+            </p>
+          </div>
+        </div>
+      </div>
+      <footer class="footer">
+        <img src="../image/logo2.png" alt="Logotip" class="logo2" />
+        <ul class="footer-list">
+          <li class="footer-item">
+            <a href="../index.html" class="footer-link">Home</a>
+          </li>
+          <li class="footer-item">
+            <a href="#" class="footer-link">About Us</a>
+          </li>
+          <li class="footer-item">
+            <a href="../pages/Contact.html" class="footer-link"
+              >Create Your Plan</a
+            >
+          </li>
+        </ul>
+        <div class="footer-images">
+          <svg
+            xmlns="http://www.w3.org/2000/svg"
+            width="24"
+            height="24"
+            viewBox="0 0 24 24"
+            fill="none"
+            stroke="currentColor"
+            stroke-width="2"
+            stroke-linecap="round"
+            stroke-linejoin="round"
+            class="footer-icon"
+          >
+            <path
+              d="M18 2h-3a5 5 0 0 0-5 5v3H7v4h3v8h4v-8h3l1-4h-4V7a1 1 0 0 1 1-1h3z"
+            />
+          </svg>
+          <svg
+            xmlns="http://www.w3.org/2000/svg"
+            width="24"
+            height="24"
+            viewBox="0 0 24 24"
+            fill="none"
+            stroke="currentColor"
+            stroke-width="2"
+            stroke-linecap="round"
+            stroke-linejoin="round"
+            class="footer-icon"
+          >
+            <rect width="20" height="20" x="2" y="2" rx="5" ry="5" />
+            <path d="M16 11.37A4 4 0 1 1 12.63 8 4 4 0 0 1 16 11.37z" />
+            <line x1="17.5" x2="17.51" y1="6.5" y2="6.5" />
+          </svg>
+          <svg
+            xmlns="http://www.w3.org/2000/svg"
+            width="24"
+            height="24"
+            viewBox="0 0 24 24"
+            fill="none"
+            stroke="currentColor"
+            stroke-width="2"
+            stroke-linecap="round"
+            stroke-linejoin="round"
+            class="footer-icon"
+          >
+            <path
+              d="M22 4s-.7 2.1-2 3.4c1.6 10-9.4 17.3-18 11.6 2.2.1 4.4-.6 6-2C3 15.5.5 9.6 3 5c2.2 2.6 5.6 4.1 9 4-.9-4.2 4-6.6 7-3.8 1.1 0 3-1.2 3-1.2z"
+            />
+          </svg>
+        </div>
+      </footer>
     </div>
   </body>
 </html>
