--- a/index.html
+++ b/index.html
@@ -23,6 +23,11 @@
             <a href="./pages/Contact.html" class="nav-link">Create Your Plan</a>
           </li>
         </ul>
+        <div class="nav-burger">
+          <div></div>
+          <div></div>
+          <div></div>
+        </div>
       </nav>
       <div class="intro">
         <h2 class="intro-title">Great coffee made simple</h2>
