about and contact pages have been made responsive for mobile

--- a/pages/AboutUs.html
+++ b/pages/AboutUs.html
@@ -24,8 +24,19 @@
               >Create Your Plan</a
             >
           </li>
+
+
         </ul>
+
+        <div class="nav-burger">
+          <div></div>
+          <div></div>
+          <div></div>
+        </div>
       </nav>
+
+
+
       <div class="intro2">
         <h3 class="intro2-title">About Us</h3>
         <p class="intro2-text">
@@ -35,6 +46,8 @@
           shipment.
         </p>
       </div>
+
+
       <div class="commitment">
         <img
           src="../image/page2 coffee man.png"
@@ -58,6 +71,9 @@
           </p>
         </div>
       </div>
+
+
+
       <div class="quality">
         <h3 class="quality-title">Uncompromising quality</h3>
         <p class="quality-text">
@@ -74,6 +90,8 @@
           class="quality-img"
         />
       </div>
+
+
       <div class="countries">
         <h4 class="countries-title">Our headquarters</h4>
         <div class="country">
@@ -121,6 +139,8 @@
           </div>
         </div>
       </div>
+
+
       <footer class="footer">
         <img src="../image/logo2.png" alt="Logotip" class="logo2" />
         <ul class="footer-list">
