contact page burger

--- a/pages/Contact.html
+++ b/pages/Contact.html
@@ -23,8 +23,12 @@
             <a href="#" class="nav-link">Create Your Plan</a>
           </li>
         </ul>
+        <div class="nav-burger">
+          <div></div>
+          <div></div>
+          <div></div>
+        </div>
       </nav>
-
 
       <div class="intro3">
         <h2 class="intro3-title">Create a plan</h2>
@@ -34,7 +38,6 @@
           fresh to your door.
         </p>
       </div>
-
 
       <div class="how3">
         <div class="how3-lines">
@@ -74,7 +77,6 @@
           </div>
         </div>
       </div>
-
 
       <div class="drink">
         <div class="drink-left">
@@ -234,7 +236,6 @@
           </div>
         </div>
       </div>
-
 
       <footer class="footer">
         <img src="../image/logo2.png" alt="Logotip" class="logo2" />
