--- a/index.html
+++ b/index.html
@@ -43,35 +43,43 @@
         <div class="collection-packs">
           <div class="collection-pack">
             <img src="./image/pack.png" alt="" class="pack-img" />
-            <h4 class="collection-title">Gran Espresso</h4>
-            <p class="collection-text">
-              Light and flavorful blend with cocoa and black pepper for an
-              intense experience
-            </p>
+            <div class="collection-textarea">
+              <h4 class="collection-title">Gran Espresso</h4>
+              <p class="collection-text">
+                Light and flavorful blend with cocoa and black pepper for an
+                intense experience
+              </p>
+            </div>
           </div>
           <div class="collection-pack">
             <img src="./image/pack.png" alt="" class="pack-img" />
-            <h4 class="collection-title">Gran Espresso</h4>
-            <p class="collection-text">
-              Light and flavorful blend with cocoa and black pepper for an
-              intense experience
-            </p>
+            <div class="collection-textarea">
+              <h4 class="collection-title">Gran Espresso</h4>
+              <p class="collection-text">
+                Light and flavorful blend with cocoa and black pepper for an
+                intense experience
+              </p>
+            </div>
           </div>
           <div class="collection-pack">
             <img src="./image/pack.png" alt="" class="pack-img" />
-            <h4 class="collection-title">Gran Espresso</h4>
-            <p class="collection-text">
-              Light and flavorful blend with cocoa and black pepper for an
-              intense experience
-            </p>
+            <div class="collection-textarea">
+              <h4 class="collection-title">Gran Espresso</h4>
+              <p class="collection-text">
+                Light and flavorful blend with cocoa and black pepper for an
+                intense experience
+              </p>
+            </div>
           </div>
           <div class="collection-pack">
             <img src="./image/pack.png" alt="" class="pack-img" />
-            <h4 class="collection-title">Gran Espresso</h4>
-            <p class="collection-text">
-              Light and flavorful blend with cocoa and black pepper for an
-              intense experience
-            </p>
+            <div class="collection-textarea">
+              <h4 class="collection-title">Gran Espresso</h4>
+              <p class="collection-text">
+                Light and flavorful blend with cocoa and black pepper for an
+                intense experience
+              </p>
+            </div>
           </div>
         </div>
       </div>
@@ -91,11 +99,13 @@
                 class="why-group-img"
                 alt="coffee"
               />
-              <h4 class="why-group-title">Best quality</h4>
-              <p class="why-group-text">
-                Discover an endless variety of the world’s best artisan coffee
-                from each of our roasters.
-              </p>
+              <div class="why-group-textarea">
+                <h4 class="why-group-title">Best quality</h4>
+                <p class="why-group-text">
+                  Discover an endless variety of the world’s best artisan coffee
+                  from each of our roasters.
+                </p>
+              </div>
             </div>
             <div class="why-group">
               <img
@@ -103,11 +113,13 @@
                 alt="coffee"
                 class="why-group-img"
               />
-              <h4 class="why-group-title">Exclusive benefits</h4>
-              <p class="why-group-text">
-                Special offers and swag when you subscribe, including 30% off
-                your first shipment.
-              </p>
+              <div class="why-group-textarea">
+                <h4 class="why-group-title">Exclusive benefits</h4>
+                <p class="why-group-text">
+                  Special offers and swag when you subscribe, including 30% off
+                  your first shipment.
+                </p>
+              </div>
             </div>
             <div class="why-group">
               <img
@@ -115,11 +127,13 @@
                 alt="coffee"
                 class="why-group-img"
               />
-              <h4 class="why-group-title">Free shipping</h4>
-              <p class="why-group-text">
-                We cover the cost and coffee is delivered fast. Peak freshness:
-                guaranteed.
-              </p>
+              <div class="why-group-textarea">
+                <h4 class="why-group-title">Free shipping</h4>
+                <p class="why-group-text">
+                  We cover the cost and coffee is delivered fast. Peak
+                  freshness: guaranteed.
+                </p>
+              </div>
             </div>
           </div>
         </div>
